<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.stonedevs.popularmovies.DetailActivityFragment"
    tools:showIn="@layout/activity_detail">

    <ImageView
        android:id="@+id/imageView_movie_poster"
        android:layout_width="185dp"
        android:layout_height="277dp"
        android:contentDescription="@string/mock_text_movie_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/textView_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_text_movie_title"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_movie_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/label_movie_release_date"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_text_movie_release_date"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_movie_user_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/label_movie_user_rating"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_movie_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_text_movie_user_rating"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/textView_movie_plot_summary_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/label_movie_plot_summary"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_movie_plot_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/mock_text_movie_plot_summary"
            android:textColor="@color/colorWhite" />

    </ScrollView>

</LinearLayout>
